2023-10-23: EB: Added shell script for cleaning datasets: datasets/cleanData.sh .
                Added shell script for extracting datasets containing days with any negative temperatures from cleaned datasets: negTempDays.sh .
2023-10-25: PO: Added a shell script to install dependencies.
                Added a shell script to cleaned data based on provided years
            EB: Added winterdays.cxx which contains methods for:
			        Taking 3 csv files containing datasets and a list of corresponding city names. 
			        Generating histograms for the number of winterdays per year
			        Generating histograms for the relative number of winterdays for the first two datasets, with the third dataset as the reference.
			        Ploting the histograms for number of winterdays together.
			        Ploting the histograms for the relative number of winterdays seperatly.
2023-10-26: PO: Started working on the subproject and added a C++ analysis file with.
					Wrote 3 function, to read the contents of the csv and convert it to a hashmap
					First for finding the number of readings for a single day.
					Second finds the sum of all temperatures recorded during the day
					The first calculates the average temperature over the day using the previouse two functions.
					Added a function to convert the string dates in the map into the date::year_month:day format
					Added a function returning average temperature per month over the years
					Added code to plot average monthly temperature
					Made 2 plots of monthlyAverage temperature